--- a/WA_CombugasCC/Admin/Admin.Master
+++ b/WA_CombugasCC/Admin/Admin.Master
@@ -4,7 +4,7 @@
     <!--<![endif]-->
     <head>
         <meta charset="utf-8" />
-        <title>Combugas | Administador Sistema</title>
+        <title>Combugas | Administrador Sistema</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <meta content="Sistema Call Center" name="description" />
