--- a/WA_CombugasCC/Admin/Admin.Master
+++ b/WA_CombugasCC/Admin/Admin.Master
@@ -1,22 +1,22 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="CallCenter.master.cs" Inherits="WA_CombugasCC.CallCenter.CallCenter" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Admin.master.cs" Inherits="WA_CombugasCC.Admin.Admin" %>
 
 <html lang="es">
     <!--<![endif]-->
     <head>
         <meta charset="utf-8" />
-        <title>Combugas | Call Center</title>
+        <title>Combugas | Administrador Sistema</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <meta content="Sistema Call Center" name="description" />
         <meta content="A W SOFTWARE | Eduardo Armendariz, Luis Rodriguez" name="author" />
-         <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
         <link href="../assets/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-        <%--<link href="../assets/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />--%>
+        <link href="../assets/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
         <link href="../assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <%--<link href="../assets/global/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css" />--%>
-        <%--<link href="../assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />--%>
-        <%--<link href="../assets/global/plugins/bootstrap-daterangepicker/daterangepicker.min.css" rel="stylesheet" type="text/css" />--%>
-        <%--<link href="../assets/global/plugins/morris/morris.css" rel="stylesheet" type="text/css" />--%>
+        <link href="../assets/global/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css" />
+        <link href="../assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
+        <link href="../assets/global/plugins/bootstrap-daterangepicker/daterangepicker.min.css" rel="stylesheet" type="text/css" />
+        <link href="../assets/global/plugins/morris/morris.css" rel="stylesheet" type="text/css" />
         <link href="../assets/global/plugins/icheck/skins/all.css" rel="stylesheet" type="text/css" />
         <link href="../assets/global/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
         <link href="../assets/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
@@ -26,8 +26,6 @@
         <link href="../assets/global/plugins/datatables/datatables.min.css" rel="stylesheet" type="text/css" />
         <link href="../assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.css" rel="stylesheet" type="text/css" />
         <link href="../assets/global/plugins/bootstrap-toastr/toastr.min.css" rel="stylesheet" type="text/css" />
-        <link href="../assets/global/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css" />
-        <link href="../assets/global/plugins/select2/css/select2-bootstrap.min.css" rel="stylesheet" type="text/css" />
         
 
                 <!--[if lt IE 9]>
@@ -41,10 +39,10 @@
         <script src="../assets/global/plugins/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
         <script src="../assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
         <script src="../assets/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
-        <%--<script src="../assets/global/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>--%>
-        <%--<script src="../assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>--%>
-        <%--<script src="../assets/global/plugins/moment.min.js" type="text/javascript"></script>--%>
-        <%--<script src="../assets/global/plugins/bootstrap-daterangepicker/daterangepicker.min.js" type="text/javascript"></script>--%>
+        <script src="../assets/global/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
+        <script src="../assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
+        <script src="../assets/global/plugins/moment.min.js" type="text/javascript"></script>
+        <script src="../assets/global/plugins/bootstrap-daterangepicker/daterangepicker.min.js" type="text/javascript"></script>
         <script src="../assets/global/plugins/icheck/icheck.min.js" type="text/javascript"></script>
         <script src="../assets/global/scripts/datatable.js" type="text/javascript"></script>
         <script src="../assets/global/plugins/datatables/datatables.min.js" type="text/javascript"></script>
@@ -60,10 +58,9 @@
 
         <link rel="shortcut icon" href="../favicon.png" /> 
 
+    </head>
+    <body class="page-container-bg-solid page-boxed" >
 
-         
-       </head>
-    <body class="page-container-bg-solid page-boxed" onload="mueveReloj()">
         <div class="page-header">
             <div class="page-header-top">
                 <div class="container">
@@ -75,13 +72,8 @@
                     <a href="javascript:;" class="menu-toggler"></a>
                     <div class="top-menu">
                         <ul class="nav navbar-nav pull-right">
-                            <li>
-                                <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
-                                    <span class="badge badge-danger" style="font-size: 18px;"><i class="icon-clock"></i> <label id="lblReloj"></label></span>
-                                </a>
-                            </li>
                             <li class="dropdown dropdown-user dropdown-dark">
-                                 <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
+                                <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
                                     <span class="username username-hide-mobile"><%Response.Write(((WA_CombugasCC.Core.usuarios)Session["sesionUsuario"]).nombre);%> </span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-default">
@@ -115,44 +107,6 @@
                 <div class="container">
                     <div class="hor-menu  ">
                         <ul class="nav navbar-nav" id="menuAdmin">
-                            <li class="">
-                                <a href="Default.aspx"> Dashboard
-                                    <span class="arrow"></span>
-                                </a>
-                               
-                            </li>
-                            <li class="menu-dropdown classic-menu-dropdown">
-                                <a href="javascript:;"> Catalogos
-                                    <span class="arrow"></span>
-                                </a>
-                                <ul class="dropdown-menu pull-left">
-                                    <li class=" ">
-                                        <a href="Zonas.aspx" class="nav-link ">
-                                             Zonas
-                                        </a>
-                                    </li>
-                                    <li class=" ">
-                                        <a href="Estados.aspx" class="nav-link  ">
-                                             Estados 
-                                        </a>
-                                    </li>
-                                    <li class=" ">
-                                        <a href="Ciudades.aspx" class="nav-link  ">
-                                            Ciudades
-                                        </a>
-                                    </li>
-                                    <li class=" ">
-                                        <a href="Colonias.aspx" class="nav-link  ">
-                                            Colonias
-                                        </a>
-                                    </li>
-                                    <li class=" ">
-                                        <a href="Arterias.aspx" class="nav-link  ">
-                                            Arterias
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
                            
                         </ul>
                     </div>
@@ -178,33 +132,10 @@
         <div class="scroll-to-top">
             <i class="icon-arrow-up"></i>
         </div>
-      
-        <script src="../assets/global/plugins/select2/js/select2.full.min.js" type="text/javascript"></script>
-        <script>
-            function mueveReloj() {
-                momentoActual = new Date()
-                hora = momentoActual.getHours()
-                minuto = momentoActual.getMinutes()
-                segundo = momentoActual.getSeconds()
+        
 
-                str_segundo = new String(segundo)
-                if (str_segundo.length == 1)
-                    segundo = "0" + segundo
+        <script type="text/javascript">
 
-                str_minuto = new String(minuto)
-                if (str_minuto.length == 1)
-                    minuto = "0" + minuto
-
-                str_hora = new String(hora)
-                if (str_hora.length == 1)
-                    hora = "0" + hora
-
-                horaImprimible = hora + " : " + minuto + " : " + segundo;
-
-                $("#lblReloj").html(horaImprimible);
-
-                setTimeout("mueveReloj()", 1000)
-            }
             cargaMenu();
 
             function cargaMenu() {
@@ -247,15 +178,17 @@
 
                             $("#menuAdmin").html(menu);
                         }
-
+                       
                     },
                     error: function (error) {
                         console.log("ERROR: " + JSON.stringify(error));
                     }
                 });
             }
+
         </script>
-         
+        
     </body>
 
 </html>
+
