--- a/WA_CombugasCC/CallCenter/CallCenter.Master
+++ b/WA_CombugasCC/CallCenter/CallCenter.Master
@@ -13,7 +13,7 @@
         <link href="../assets/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
         <%--<link href="../assets/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />--%>
         <link href="../assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        
+         <link href="../assets/global/plugins/typeahead/typeahead.css" rel="stylesheet" type="text/css" />
         <%--<link href="../assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />--%>
         <%--<link href="../assets/global/plugins/bootstrap-daterangepicker/daterangepicker.min.css" rel="stylesheet" type="text/css" />--%>
         <%--<link href="../assets/global/plugins/morris/morris.css" rel="stylesheet" type="text/css" />--%>
@@ -59,6 +59,8 @@
         <script src="../assets/pages/scripts/ui-toastr.min.js" type="text/javascript"></script>
 
         <script src="../assets/global/plugins/dropzone/dropzone.min.js" type="text/javascript"></script>
+         <script src="../assets/global/plugins/typeahead/handlebars.min.js" type="text/javascript"></script>
+        <script src="../assets/global/plugins/typeahead/typeahead.bundle.min.js" type="text/javascript"></script>
 
         <link rel="shortcut icon" href="../favicon.png" /> 
 
